--- a/docker/.github/workflows/deploy.yml
+++ b/docker/.github/workflows/deploy.yml
@@ -1,42 +1,10 @@
-name: Build and Deploy to ECR
-
-on:
-  push:
-    branches:
-      - main
-
-env:
-  AWS_REGION: us-east-1                  
-  ECR_REPO: my-app-repo                  
-  IMAGE_TAG: latest                      
-
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      # --- Frontend Build ---
-      - name: Build Frontend
-        working-directory: ./frontend
-        run: |
-          npm install
-          npm run build
-
-      # --- Backend Build ---
-      - name: Build Backend EAR
-        working-directory: ./backend
-        run: |
-          ./gradlew clean build ear
-
-      # --- Copy EAR for Docker ---
-      - name: Prepare EAR for Docker
-        run: |
-          cp backend/build/libs/*.ear backend/app.ear
-
-      # --- Configure AWS Credentials ---
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -44,23 +12,31 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # --- Create ECR Repo If Not Exists ---
-      - name: Create ECR Repo (if missing)
+      # Create frontend repo if not exists
+      - name: Create ECR repo for frontend
         run: |
-          aws ecr describe-repositories --repository-names $ECR_REPO || \
-          aws ecr create-repository --repository-name $ECR_REPO
+          aws ecr describe-repositories --repository-names frontend-repo || \
+          aws ecr create-repository --repository-name frontend-repo
 
-      # --- Authenticate Docker to ECR ---
-      - name: Log in to Amazon ECR
+      # Create backend repo if not exists
+      - name: Create ECR repo for backend
+        run: |
+          aws ecr describe-repositories --repository-names backend-repo || \
+          aws ecr create-repository --repository-name backend-repo
+
+      - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      # --- Build Docker Image ---
-      - name: Build Docker image
+      # Build and push frontend image
+      - name: Build frontend Docker image
         run: |
-          docker build -t $ECR_REPO:$IMAGE_TAG .
+          docker build -t frontend-repo:latest ./frontend
+          docker tag frontend-repo:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/frontend-repo:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/frontend-repo:latest
 
-      # --- Tag & Push Docker Image to ECR ---
-      - name: Tag and Push to ECR
+      # Build and push backend image
+      - name: Build backend Docker image
         run: |
-          docker tag $ECR_REPO:$IMAGE_TAG ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/$ECR_REPO:$IMAGE_TAG
-          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/$ECR_REPO:$IMAGE_TAG
+          docker build -t backend-repo:latest ./backend
+          docker tag backend-repo:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/backend-repo:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/backend-repo:latest
